<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-80dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLogo"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-78dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_loginMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_subtitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_registerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_loginMenu"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_aboutUsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_registerMenu"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="About Us"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_contactsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_aboutUsMenu"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Contacts"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_termsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_contactsMenu"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/roboto_regular"
        android:text="Terms and Conditions"
        android:textColor="@android:color/white" />


</RelativeLayout>