<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Update Info"
                android:textAlignment="center"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update all user's information"
                android:textSize="17sp"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/et_nameRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_person"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_emailRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_email"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_username"
                android:fontFamily="@font/roboto_regular"
                android:hint="Username"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_phoneRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_phone"
                android:fontFamily="@font/roboto_regular"
                android:hint="Phone Number"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_cityRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_city"
                android:fontFamily="@font/roboto_regular"
                android:hint="City"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_addressRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_address"
                android:fontFamily="@font/roboto_regular"
                android:hint="Address"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_postalCodeRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_postal_code"
                android:fontFamily="@font/roboto_regular"
                android:hint="Postal Code"
                android:inputType="textPostalAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_nifRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_nifcard"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/nif"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/et_switchRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:drawableLeft="@drawable/ic_user"
                android:fontFamily="@font/roboto_regular"
                android:padding="15dp"
                android:text="Profile Privacy"
                android:theme="@style/SwitchGreen"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/btn_custom_gbo"
                android:fontFamily="@font/roboto_regular"
                android:onClick="sendMessageRegister"
                android:text="Update"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:layout_centerInParent="true"
                android:layout_marginLeft="191dp"
                android:layout_marginRight="50dp"
                android:drawablePadding="5dp"/>

            <Button
                android:id="@+id/goToLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:onClick="sendMessageToLogin"
                android:text="Reset"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>